--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,10 @@ SERVICE_NAME=api-gateway
 
 API_HOST=0.0.0.0
 API_PORT=8010
+# CSV список origin'ов для CORS; в APP_ENV=prod нельзя оставлять '*'
+CORS_ALLOWED_ORIGINS=*
+# Если CORS_ALLOWED_ORIGINS=* — приложение принудительно выключит credentials
+CORS_ALLOW_CREDENTIALS=true
 
 # =============================================================================
 # AUTH
@@ -14,8 +18,9 @@ API_PORT=8010
 AUTH_MODE=jwt
 # Если AUTH_MODE=api_key, перечисляй ключи через запятую: key1,key2,key3
 API_KEYS=
-# Service-to-service ключи (fallback в AUTH_MODE=jwt)
+# Service-to-service ключи (в AUTH_MODE=jwt fallback работает только для service ключей)
 SERVICE_API_KEYS=
+# В APP_ENV=prod AUTH_MODE=none запрещён
 ALLOW_SERVICE_API_KEY_IN_JWT_MODE=true
 
 # JWT/OIDC (production)
@@ -25,6 +30,10 @@ OIDC_AUDIENCE=
 OIDC_ALGORITHMS=RS256
 OIDC_DISCOVERY_TIMEOUT_SEC=5
 JWT_CLOCK_SKEW_SEC=30
+JWT_SERVICE_CLAIM_KEY=token_type
+JWT_SERVICE_CLAIM_VALUES=service,client_credentials,m2m
+JWT_SERVICE_ROLE_CLAIM=roles
+JWT_SERVICE_ALLOWED_ROLES=service,admin
 
 # DEV ONLY: shared secret для локальной проверки JWT без OIDC
 JWT_SHARED_SECRET=
@@ -65,6 +74,17 @@ WHISPER_LANGUAGE=ru
 WHISPER_VAD_FILTER=true
 # beam_size (1 быстрее, 3-5 точнее)
 WHISPER_BEAM_SIZE=1
+
+# =============================================================================
+# MEETING CONNECTOR (SBERJAZZ TARGET)
+# =============================================================================
+# sberjazz|sberjazz_mock|none
+MEETING_CONNECTOR_PROVIDER=sberjazz_mock
+SBERJAZZ_API_BASE=
+SBERJAZZ_API_TOKEN=
+SBERJAZZ_TIMEOUT_SEC=10
+SBERJAZZ_RETRIES=2
+SBERJAZZ_RETRY_BACKOFF_MS=300
 
 # =============================================================================
 # LLM (OpenAI-compatible) — ДЛЯ ОТЧЁТА/АНАЛИТИКИ
