feat: add reconciliation worker for stale sberjazz sessions

--- a/.env.example
+++ b/.env.example
@@ -87,6 +87,9 @@ SBERJAZZ_RETRIES=2
 SBERJAZZ_RETRY_BACKOFF_MS=300
 SBERJAZZ_SESSION_TTL_SEC=86400
 SBERJAZZ_RECONCILE_STALE_SEC=900
+RECONCILIATION_ENABLED=true
+RECONCILIATION_INTERVAL_SEC=60
+RECONCILIATION_LIMIT=200
 
 # =============================================================================
 # LLM (OpenAI-compatible) — ДЛЯ ОТЧЁТА/АНАЛИТИКИ
