Harden live-pull mapping and add connector live smoke

--- a/.env.example
+++ b/.env.example
@@ -121,6 +121,10 @@ SBERJAZZ_RECONCILE_STALE_SEC=900
 SBERJAZZ_LIVE_PULL_ENABLED=true
 SBERJAZZ_LIVE_PULL_BATCH_LIMIT=20
 SBERJAZZ_LIVE_PULL_SESSIONS_LIMIT=100
+SBERJAZZ_LIVE_PULL_RETRIES=1
+SBERJAZZ_LIVE_PULL_RETRY_BACKOFF_MS=200
+# Для e2e/mock live-pull: base64 одного тестового чанка (пусто = live mock не отправляет чанки)
+SBERJAZZ_MOCK_LIVE_CHUNKS_B64=
 RECONCILIATION_ENABLED=true
 RECONCILIATION_INTERVAL_SEC=60
 RECONCILIATION_LIMIT=200
