--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,6 +85,7 @@ services:
       SBERJAZZ_CB_AUTO_RESET_MIN_AGE_SEC: ${SBERJAZZ_CB_AUTO_RESET_MIN_AGE_SEC:-30}
       SBERJAZZ_SESSION_TTL_SEC: ${SBERJAZZ_SESSION_TTL_SEC:-86400}
       SBERJAZZ_RECONCILE_STALE_SEC: ${SBERJAZZ_RECONCILE_STALE_SEC:-900}
+      SBERJAZZ_MOCK_LIVE_CHUNKS_B64: ${SBERJAZZ_MOCK_LIVE_CHUNKS_B64:-}
       LLM_ENABLED: ${LLM_ENABLED:-false}
       LOG_LEVEL: ${LOG_LEVEL:-INFO}
       LOG_FORMAT: ${LOG_FORMAT:-json}
@@ -311,6 +312,9 @@ services:
       SBERJAZZ_LIVE_PULL_ENABLED: ${SBERJAZZ_LIVE_PULL_ENABLED:-true}
       SBERJAZZ_LIVE_PULL_BATCH_LIMIT: ${SBERJAZZ_LIVE_PULL_BATCH_LIMIT:-20}
       SBERJAZZ_LIVE_PULL_SESSIONS_LIMIT: ${SBERJAZZ_LIVE_PULL_SESSIONS_LIMIT:-100}
+      SBERJAZZ_LIVE_PULL_RETRIES: ${SBERJAZZ_LIVE_PULL_RETRIES:-1}
+      SBERJAZZ_LIVE_PULL_RETRY_BACKOFF_MS: ${SBERJAZZ_LIVE_PULL_RETRY_BACKOFF_MS:-200}
+      SBERJAZZ_MOCK_LIVE_CHUNKS_B64: ${SBERJAZZ_MOCK_LIVE_CHUNKS_B64:-}
       RECONCILIATION_ENABLED: ${RECONCILIATION_ENABLED:-true}
       RECONCILIATION_INTERVAL_SEC: ${RECONCILIATION_INTERVAL_SEC:-60}
       RECONCILIATION_LIMIT: ${RECONCILIATION_LIMIT:-200}
