Add startup connector probe guardrails for prod SberJazz

--- a/.env.example
+++ b/.env.example
@@ -126,6 +126,8 @@ SBERJAZZ_LIVE_PULL_RETRY_BACKOFF_MS=200
 SBERJAZZ_LIVE_PULL_FAIL_RECONNECT_THRESHOLD=3
 SBERJAZZ_JOIN_IDEMPOTENT_TTL_SEC=30
 SBERJAZZ_REQUIRE_HTTPS_IN_PROD=true
+SBERJAZZ_STARTUP_PROBE_ENABLED=true
+SBERJAZZ_STARTUP_PROBE_FAIL_FAST_IN_PROD=true
 # Для e2e/mock live-pull: base64 одного тестового чанка (пусто = live mock не отправляет чанки)
 SBERJAZZ_MOCK_LIVE_CHUNKS_B64=
 RECONCILIATION_ENABLED=true
