--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,6 +30,9 @@ jobs:
         run: |
           python scripts/check_release.py --tag "${GITHUB_REF_NAME}"
 
+      - name: Alert rules check (promtool + runbook anchors)
+        run: make alerts-rules-check
+
       - name: Compose build
         run: docker compose build
 
@@ -70,6 +73,13 @@ jobs:
             api-gateway \
             python tools/alerts_delivery_smoke.py \
             --alertmanager-url http://alertmanager:9093 \
+            --sink-url http://alert-webhook-sink:9080
+          docker compose run --rm -T \
+            -v "$(pwd):/app" \
+            -e PYTHONPATH=/app:/app/src \
+            api-gateway \
+            python tools/alert_relay_metrics_smoke.py \
+            --relay-url http://alert-relay:9081 \
             --sink-url http://alert-webhook-sink:9080
 
       - name: Compose down
