ci(perf): re-enable strict admin queue checks

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -130,6 +130,7 @@ jobs:
             python tools/realtime_load_guardrail.py \
             --base-url http://api-gateway:8010 \
             --user-key dev-user-key \
+            --service-key dev-service-key \
             --meetings 8 \
             --concurrency 4 \
             --chunks-per-meeting 2 \
@@ -138,6 +139,8 @@ jobs:
             --max-p95-ingest-ms 600 \
             --max-p95-e2e-ms 20000 \
             --min-throughput-meetings-per-min 6 \
+            --max-total-dlq-depth 0 \
+            --strict-admin-checks \
             --report-json reports/realtime_load_guardrail_ci.json
           docker compose run --rm -T \
             -v "$(pwd):/app" \
