feat(security): require jwt auth mode in prod by default

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,8 @@ API_KEYS=
 # Service-to-service ключи (в AUTH_MODE=jwt fallback работает только для service ключей)
 SERVICE_API_KEYS=
 # В APP_ENV=prod AUTH_MODE=none запрещён
+# В APP_ENV=prod по умолчанию требуется AUTH_MODE=jwt (можно ослабить только осознанно)
+AUTH_REQUIRE_JWT_IN_PROD=true
 # В APP_ENV=prod fallback service API key в режиме jwt игнорируется (только Bearer JWT)
 ALLOW_SERVICE_API_KEY_IN_JWT_MODE=true
 
