feat: tenant enforcement for user JWTs

--- a/.env.example
+++ b/.env.example
@@ -44,6 +44,11 @@ JWT_SERVICE_PERMISSION_CLAIM=scope
 JWT_SERVICE_REQUIRED_SCOPES_ADMIN_READ=agent.admin.read,agent.admin
 JWT_SERVICE_REQUIRED_SCOPES_ADMIN_WRITE=agent.admin.write,agent.admin
 JWT_SERVICE_REQUIRED_SCOPES_WS_INTERNAL=agent.ws.internal,agent.admin
+
+# Multi-tenant enforcement (JWT only)
+TENANT_ENFORCEMENT_ENABLED=false
+TENANT_CLAIM_KEY=tenant_id
+TENANT_CONTEXT_KEY=tenant_id
 # Персистентный security audit trail в БД (security_audit_events)
 SECURITY_AUDIT_DB_ENABLED=true
 # В APP_ENV=prod сервис завершится при readiness error
