docs: add OIDC provider guidance and keep jwt optional

--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ CORS_ALLOW_CREDENTIALS=true
 # AUTH
 # =============================================================================
 # api_key|jwt|none
-AUTH_MODE=jwt
+AUTH_MODE=api_key
 # Если AUTH_MODE=api_key, перечисляй ключи через запятую: key1,key2,key3
 API_KEYS=
 # Альтернатива через файл (например docker secrets):
@@ -29,7 +29,7 @@ AUTH_REQUIRE_JWT_IN_PROD=true
 # В APP_ENV=prod fallback service API key в режиме jwt игнорируется (только Bearer JWT)
 ALLOW_SERVICE_API_KEY_IN_JWT_MODE=true
 
-# JWT/OIDC (production)
+# JWT/OIDC (production) — включай, когда готов интегрировать провайдера
 OIDC_ISSUER_URL=
 OIDC_JWKS_URL=
 OIDC_AUDIENCE=
