feat: vault secrets provider

--- a/.env.example
+++ b/.env.example
@@ -58,6 +58,20 @@ READINESS_FAIL_FAST_IN_PROD=true
 JWT_SHARED_SECRET=
 # JWT_SHARED_SECRET_FILE=/run/secrets/jwt_shared_secret
 
+# External secrets provider (Vault)
+# SECRETS_PROVIDER=vault
+# VAULT_ADDR=https://vault.example.com
+# VAULT_TOKEN=
+# VAULT_TOKEN_FILE=/run/secrets/vault_token
+# VAULT_NAMESPACE=
+# VAULT_KV_MOUNT=secret
+# VAULT_SECRET_PATH=interview-agent
+# VAULT_KV_VERSION=2
+# VAULT_TIMEOUT_SEC=5
+# VAULT_SKIP_VERIFY=false
+# Пример маппинга: ENV_KEY=secret_field
+# VAULT_FIELD_MAP=API_KEYS=api_keys,SERVICE_API_KEYS=service_api_keys,JWT_SHARED_SECRET=jwt_shared_secret,SBERJAZZ_API_TOKEN=sberjazz_api_token,SMTP_PASS=smtp_pass,OPENAI_API_KEY=openai_api_key
+
 # =============================================================================
 # DB / REDIS
 # =============================================================================
