feat: add inline pipeline, quick-record API, artifacts/reports, and dedicated web UI

--- a/.env.example
+++ b/.env.example
@@ -77,6 +77,8 @@ JWT_SHARED_SECRET=
 # =============================================================================
 POSTGRES_DSN=postgresql+psycopg://postgres:postgres@postgres:5432/agent
 REDIS_URL=redis://redis:6379/0
+# redis|inline (inline = без Redis воркеров, обработка в API процессе)
+QUEUE_MODE=redis
 
 # =============================================================================
 # STORAGE (chunks/blob)
@@ -85,6 +87,8 @@ REDIS_URL=redis://redis:6379/0
 STORAGE_MODE=local_fs
 # Базовый путь для local_fs
 CHUNKS_DIR=./data/chunks
+# Базовый путь для сохранения transcript/report артефактов
+RECORDS_DIR=./recordings
 # Для shared_fs можно указать отдельный shared mount path (например NFS)
 STORAGE_SHARED_FS_DIR=
 # В prod запрещает local_fs
@@ -192,6 +196,8 @@ EMAIL_FROM=hr-agent@example.com
 # QUICK RECORDER (agent2)
 # =============================================================================
 QUICK_RECORD_OUTPUT_DIR=./recordings
+QUICK_RECORD_ENABLED=true
+QUICK_RECORD_DEFAULT_DURATION_SEC=1800
 QUICK_RECORD_DURATION_SEC=0
 QUICK_RECORD_SEGMENT_LENGTH_SEC=120
 QUICK_RECORD_OVERLAP_SEC=30
@@ -199,6 +205,7 @@ QUICK_RECORD_SAMPLE_RATE=44100
 QUICK_RECORD_BLOCK_SIZE=1024
 QUICK_RECORD_LANGUAGE=ru
 QUICK_RECORD_WHISPER_MODEL_SIZE=
+QUICK_RECORD_AUTO_OPEN_URL=false
 QUICK_RECORD_AGENT_BASE_URL=http://127.0.0.1:8010
 QUICK_RECORD_AGENT_API_KEY=
 QUICK_RECORD_WAIT_REPORT_SEC=180
