feat: strengthen script-first recording flow with local reports and agent orchestrator

--- a/.env.example
+++ b/.env.example
@@ -208,6 +208,7 @@ QUICK_RECORD_WHISPER_MODEL_SIZE=
 QUICK_RECORD_AUTO_OPEN_URL=false
 QUICK_RECORD_AGENT_BASE_URL=http://127.0.0.1:8010
 QUICK_RECORD_AGENT_API_KEY=
+QUICK_RECORD_BUILD_LOCAL_REPORT=true
 QUICK_RECORD_WAIT_REPORT_SEC=180
 QUICK_RECORD_POLL_INTERVAL_SEC=3
 
