feat: complete P0 reliability block for script-first recorder

--- a/.env.example
+++ b/.env.example
@@ -203,11 +203,15 @@ QUICK_RECORD_SEGMENT_LENGTH_SEC=120
 QUICK_RECORD_OVERLAP_SEC=30
 QUICK_RECORD_SAMPLE_RATE=44100
 QUICK_RECORD_BLOCK_SIZE=1024
+QUICK_RECORD_INPUT_DEVICE=
+QUICK_RECORD_MIN_FREE_MB=512
 QUICK_RECORD_LANGUAGE=ru
 QUICK_RECORD_WHISPER_MODEL_SIZE=
 QUICK_RECORD_AUTO_OPEN_URL=false
 QUICK_RECORD_AGENT_BASE_URL=http://127.0.0.1:8010
 QUICK_RECORD_AGENT_API_KEY=
+QUICK_RECORD_AGENT_HTTP_RETRIES=2
+QUICK_RECORD_AGENT_HTTP_BACKOFF_SEC=0.75
 QUICK_RECORD_BUILD_LOCAL_REPORT=true
 QUICK_RECORD_WAIT_REPORT_SEC=180
 QUICK_RECORD_POLL_INTERVAL_SEC=3
