feat: add objective comparable interview analytics and manual delivery

--- a/.env.example
+++ b/.env.example
@@ -191,6 +191,11 @@ SMTP_PORT=587
 SMTP_USER=
 SMTP_PASS=
 EMAIL_FROM=hr-agent@example.com
+DELIVERY_MANUAL_MODE_ONLY=true
+# format: account_id:from_email,account2:from_email2
+DELIVERY_SENDER_ACCOUNTS=
+DELIVERY_MAX_RECIPIENTS=20
+INTERVIEW_SCENARIOS_DIR=./data/interview_scenarios/examples
 
 # =============================================================================
 # QUICK RECORDER (agent2)
