feat: add decision engine, adaptive tuning, senior brief export, and guardrails

--- a/.env.example
+++ b/.env.example
@@ -196,6 +196,17 @@ DELIVERY_MANUAL_MODE_ONLY=true
 DELIVERY_SENDER_ACCOUNTS=
 DELIVERY_MAX_RECIPIENTS=20
 INTERVIEW_SCENARIOS_DIR=./data/interview_scenarios/examples
+SCORECARD_WEIGHT_OVERRIDES_PATH=./data/scorecard/weight_overrides.json
+SCORECARD_AUTO_TUNING_ENABLED=true
+SCORECARD_TUNING_LEARNING_RATE=0.2
+SCORECARD_TUNING_MIN_REVIEWS=3
+DECISION_HIRE_SCORE_MIN=4.0
+DECISION_HOLD_SCORE_MIN=3.2
+DECISION_NOHIRE_SCORE_MAX=2.8
+DECISION_MIN_CONFIDENCE=0.45
+DECISION_MAX_INSUFFICIENT_FOR_HIRE=1
+DECISION_MAX_RISK_FOR_HIRE=1
+DECISION_NOHIRE_RISK_MIN=3
 
 # =============================================================================
 # QUICK RECORDER (agent2)
